--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "santa-clara-pipeline-dashboard",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://beccadub.github.io/Pipeline-Dashboard",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
