--- a/data/metros/santa-clara/projects.json
+++ b/data/metros/santa-clara/projects.json
@@ -1,1 +1,93 @@
-
+# santa-clara/projects.json
+[
+  {
+    "project_name": "Santana Row Phase 4",
+    "address": "3055 Olin Ave, San Jose, Est. Delivery: Q1 2025",
+    "submarket": "San Jose",
+    "units": 1850,
+    "stage": "Under Construction",
+    "estimated_delivery": "Q1 2025",
+    "developer": "Federal Realty Investment Trust"
+  },
+  {
+    "project_name": "The Village at Stanford",
+    "address": "Palo Alto",
+    "submarket": "Palo Alto",
+    "units": 1420,
+    "stage": "Approved",
+    "estimated_delivery": "Q2 2025",
+    "developer": "Stanford University"
+  },
+  {
+    "project_name": "Downtown Mountain View",
+    "address": "Mountain View",
+    "submarket": "Mountain View",
+    "units": 980,
+    "stage": "Planning",
+    "estimated_delivery": "Q4 2026",
+    "developer": "Google Real Estate"
+  },
+  {
+    "project_name": "North County Gateway",
+    "address": "San Jose",
+    "submarket": "San Jose",
+    "units": 850,
+    "stage": "Under Construction",
+    "estimated_delivery": "Q1 2025",
+    "developer": "Lennar Multifamily"
+  },
+  {
+    "project_name": "Stanford Research Park Housing",
+    "address": "Palo Alto",
+    "submarket": "Palo Alto",
+    "units": 650,
+    "stage": "Approved",
+    "estimated_delivery": "Q2 2025",
+    "developer": "Stanford University"
+  },
+  {
+    "project_name": "Sunnyvale Station District",
+    "address": "Sunnyvale",
+    "submarket": "Sunnyvale",
+    "units": 620,
+    "stage": "Under Construction",
+    "estimated_delivery": "Q1 2025",
+    "developer": "Sunnyvale Development"
+  },
+  {
+    "project_name": "Cupertino Main Street",
+    "address": "Cupertino",
+    "submarket": "Cupertino",
+    "units": 580,
+    "stage": "Approved",
+    "estimated_delivery": "Q3 2025",
+    "developer": "Cupertino Developer"
+  },
+  {
+    "project_name": "Campbell Technology Park",
+    "address": "Campbell",
+    "submarket": "Campbell",
+    "units": 520,
+    "stage": "Under Construction",
+    "estimated_delivery": "Q2 2025",
+    "developer": "Campbell Developer"
+  },
+  {
+    "project_name": "Los Altos Commons",
+    "address": "Los Altos",
+    "submarket": "Los Altos",
+    "units": 480,
+    "stage": "Planning",
+    "estimated_delivery": "Q1 2027",
+    "developer": "Los Altos Developer"
+  },
+  {
+    "project_name": "Fremont Innovation District",
+    "address": "Fremont",
+    "submarket": "Fremont",
+    "units": 450,
+    "stage": "Approved",
+    "estimated_delivery": "Q4 2025",
+    "developer": "Fremont Developer"
+  }
+]
