--- a/data/metros/santa-clara/config.json
+++ b/data/metros/santa-clara/config.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "Santa Clara County",
+  "display_name": "Santa Clara",
+  "last_updated": "2025-08-21",
+  "data_source": "Planning Commission meetings and city planning departments",
+  "total_units": 5750,
+  "total_projects": 10
+}
