--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "homepage": "https://beccadub.github.io/Pipeline-Dashboard",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0", 
     "react-scripts": "5.0.1",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28"
   },
   "scripts": {
     "start": "react-scripts start",
